# AC.Rogue.PatchFix

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml  release.yml
cmake/toolchains/: msvc-wine-clang-cl-x64.cmake  msvc-wine-clang-cl.cmake
config/: AC.Rogue.PatchFix.ini  AC.Syndicate.PatchFix.ini
include/: constants.hpp  logger.hpp
include/config/: enums.hpp  file_watcher.hpp  language.hpp
include/hooks/: display_detection.hpp  fov_correction.hpp  fps_unlock.hpp  game_state.hpp  language_unlock.hpp  tags.hpp  viewport_fitting.hpp  viewport_scaling.hpp
include/hooks/registry/: all_hooks.hpp  config_base.hpp  dep_list.hpp  hook_traits.hpp  ini_field.hpp  parsers.hpp  registry.hpp  validate.hpp
include/patterns/: signatures.hpp
include/win32/: string.hpp  unique_handle.hpp
src/: dllmain.cpp  logger.cpp
src/config/: file_watcher.cpp
src/hooks/: .clang-tidy  display_detection.cpp  fov_correction.cpp  game_state.cpp  language_unlock.cpp  registry.cpp  viewport_fitting.cpp  viewport_scaling.cpp
src/patterns/: signatures.cpp
